2008-03-14  Tim-Philipp Müller  <tim at centricular dot net>

	* src/sj-play.c: (select_track), (cb_error):
	  Fix error handling: when the state change fails immediately
	  (e.g. because the audio device can't be opened), return FALSE
	  to the caller, so that the caller doesn't try to go into
	  playing state a second time, which would result in two error
	  dialogs being shown. Also set pipeline to NULL state when we
	  get an error, so any other (generic) error messages on the
	  pipeline's bus are flushed - we only want to show the first
	  error message. Fixes #520370.

	  Also fix up seeking in select_track: state changs to PAUSED or
	  PLAYING state are usually async, so a seek right after will
	  usually fail.

2008-03-10  Ross Burton  <ross@burtonini.com>

	* Makefile.am:
	Clean up release rules.

2008-03-10  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.22.0.

2008-03-07  Ross Burton  <ross@burtonini.com>

	* sound-juicer.spec.in:
	Updated spec file (thanks Phil Long)

2008-03-05  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Fix crash when opening prefs dialogs (#519925, based on a patch by
	Matthew Martin).

2008-03-04  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Fix the path chooser (#519816, thanks Matthew Martin).

2008-02-29  Ross Burton  <ross@burtonini.com>

	* src/sj-genres.c:
	Translate the genres (#519150, thanks Brian Geppert).

2008-02-27  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	* src/sound-juicer.h:
	* src/sj-play.c:
	Add a PAUSED track state (#518760, thanks Brian Geppert)

2008-02-27  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	* src/sound-juicer.h:
	Don't create custom stock items when we can use the system ones.

2008-02-26  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Don't use custom icons for the playing/ripping status icons, but
	the g-i-t stock icons (#404546, Michael Monreal).
	
	* data/sj-play.png:
	* data/sj-record.png:
	* data/Makefile.am:
	Remove.
